@@ -1,5 +1,10 @@
 2002-01-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02931] use POST in multipart.cgi
+	* scripts/multipart/multipart.cgi.in: support POST method
+
+2002-01-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02930] Re: fixed w3mmail.cgi
 	* scripts/w3mmail.cgi.in (lang_header_default): [=_?] should be encoded
 	* scripts/w3mmail.cgi.in (lang_body_default): '=' should be encoded
@@ -2405,4 +2410,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.275 2002/01/30 04:27:32 ukai Exp $
+$Id: ChangeLog,v 1.276 2002/01/30 04:42:38 ukai Exp $
